crates/jsonschema-codegen/tests/ui/invalid_all_of_empty.rs
#[jsonschema::validator(schema = r#"{"allOf":[]}"#)]
struct InvalidAllOfEmptyValidator;

fn main() {}
